<resources>
    <string name="app_name">Board Game Geeks</string>
    <string name="test_version">test version</string>
    <string name="button_search">SEARCH</string>
    <string name="bg_description">Description</string>
    <string name="bg_min_age">Minimum Age</string>
    <string name="bg_max_players">Maximum Players</string>
    <string name="bg_min_players">Minimum Players</string>
    <string name="bg_year">Year</string>
    <string name="bg_name">Name</string>
    <string name="bg_publisher">Publisher</string>
    <string name="bg_creators">Creators</string>
    <string name="bg_rating">Rating</string>
    <string name="bg_url">Url</string>
    <string name="boardgame_image_description">Boardgame image</string>
    <string name="bg_creator">Creator</string>
    <string name="api_link">https://www.boardgameatlas.com</string>
    <string name="authors">Bavo Knaeps\nJitse Wierdsma</string>
    <string name="like_btn_text">LIKE</string>
</resources>
