<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bg_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition">

    <TextView
        android:id="@+id/tv_bg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bg_name"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_bg_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/bg_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_bg_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bg_rating"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_bg_min_players"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/bg_min_players" />

    <TextView
        android:id="@+id/tv_bg_max_players"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/bg_max_players" />

    <TextView
        android:id="@+id/tv_bg_min_age"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:text="@string/bg_min_age" />

    <TextView
        android:id="@+id/tv_bg_description"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:text="@string/bg_description" />

    <Button
        android:id="@+id/btn_bg_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bg_publisher" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bg_creators"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tv_bg_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/bg_url"
        android:autoLink="web"/>

    <ImageView
        android:id="@+id/iv_bg_img_url"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:contentDescription="@string/boardgame_image_description" />

</LinearLayout>